--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,27 +31,27 @@
             <nav class="collapse navbar-collapse" id="navbarHeader">
                 <ul class="menu">
                     <li>
-                        <a href="" title="">
+                        <a href="" title="Favoris">
                             <i class="las la-heart"></i>
-                            <span>favoris</span>
+                            <span>Favoris</span>
                         </a>
                     </li>
                     <li>
-                        <a href="" title="">
+                        <a href="" title="Recherche">
                             <i class="las la-search"></i>
-                            <span>recherche</span>
+                            <span>Recherche</span>
                         </a>
                     </li>
                     <li>
-                        <a href="" title="">
+                        <a href="" title="Messagerie">
                             <i class="las la-envelope"></i>
-                            <span>message</span>
+                            <span>Message</span>
                         </a>
                     </li>
                     <li>
-                        <a href="" title="">
+                        <a href= "{{ path('app_login') }}" title=" Page de connexion">
                             <i class="las la-user"></i>
-                            <span>se connecter</span>
+                            <span>Se connecter</span>
                         </a>
                     </li>
                 </ul>
