--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -25,16 +25,19 @@
                         <div>
                             <select name="categoryFilter" id="categoryFilter">
                                 <option value="">Secteur d'activité</option>
+                                <option value=""></option>
                             </select>
                         </div>
                         <div>
                             <select name="locationFilter" id="locationFilter">
                                 <option value="">Où</option>
+                                <option value=""></option>
                             </select>
                         </div>
                         <div>
                             <select name="adTypeFilter" id="adTypeFilter">
                                 <option value="">Type d'annonces ?</option>
+                                <option value=""></option>
                             </select>
                         </div>
                         <a href="#"  type="button" class=" button violetBackground">C'est parti</a>
