--- a/templates/home/_listAnnouncements.html.twig
+++ b/templates/home/_listAnnouncements.html.twig
@@ -1,13 +1,13 @@
 
 <!--Bloc Carte entreprise-->
     <div class="card">
-        <div>
+        <div class="card_bloc_1">
             <img src="{{ asset('images/announcements/'~ announcement.image ) | imagine_filter('miniatures') }}" alt="Image d'illustration de l'annonce : '{{ announcement.title }}'">
             {# <img src="{{ vich_uploader_asset(announcement, 'imageFile') | imagine_filter('miniatures') }}" alt="Image d'illustration de l'annonce : '{{ announcement.title }}'"> #}
             {#<a href="{{ path('home_show', {slug: announcement.slug }) }}">Voir l'annonce</a>#}
         </div>
 
-        <div>
+        <div class="card_bloc_2">
             <div class="card_category pinkBackground">{{ announcement.category.name }}</div>
             <div class="card_title">{{ announcement.title }}</div>
             <div class="card_text">{{ announcement.description }}</div>
@@ -19,7 +19,7 @@
             </div>
         </div>
 
-        <div>
+        <div class="card_bloc_3">
             <div class="informations">
                 <div class="card_alternative_text"><i class="las la-map-marker"></i>Localisation : {{ announcement.postalCode }}</div>
                 <div class="card_alternative_text"><i class="las la-clock"></i>Date de publication : {{ announcement.createdAt | date('d.m.Y')}}</div>
