--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -352,11 +352,13 @@ main section p {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         gap: 15px;
+        padding: 15px;
     }
 
     .card img {
         height: 100%;
         object-fit: cover;
+        margin-bottom: 0;
     }
 
     .card_bloc_2 {
@@ -393,6 +395,10 @@ main section p {
         margin-bottom: 0;
     }
 
+    .pagination{
+        width: 80%;
+        margin: 25px auto 0;
+    }
 }
 /*Fin Vue tablette */
 
