--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,12 +3,6 @@
 {% block title %} Yeah! - Accueil{% endblock %}
 
 {% block body %}
-
-      <div class="w-50 max-auto">
-            <form action="{{ path('search') }}" maethod="get" class="form-inline mb-5">
-                 <input type="text" name="search" placeholder="Rechercher" class="form-control mr-2">
-                 <button class="btn btn-primary">Rechercher</button>
-            </form>
     <main>
         <div>
             <!--Présentation entreprise-->
@@ -23,11 +17,11 @@
             <!--Liste entreprises-->
             <section>
             <!--Barre de recherche-->
-                        <div class="w-50 max-auto">
-            <form action="{{ path('search') }}" maethod="get" class="form-inline mb-5">
-                 <input type="text" name="search" placeholder="Rechercher" class="form-control mr-2">
-                 <button class="btn btn-primary">Rechercher</button>
-            </form>    
+                <div class="search_filter"> 
+                    <div class="search_bar">
+                        <div>
+                            <input type="text" placeholder="Que recherchez-vous ?">
+                        </div> 
                         <div>
                             <select name="categoryFilter" id="categoryFilter">
                                 <option value="">Secteur d'activité</option>
