fonctionnalités du formulaire d'annonces à vérifier

--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -27,6 +27,7 @@
                     {{ form_row(form.city)}}
                     <datalist id="selectPannel" autocomplete="off">
                     </datalist>
+                    {{ form_row(form.coordinates)}}
                 </div>
                 
 
