--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -302,9 +302,11 @@ main section p {
       color: #ebf2e3;
   }
   .titre {
-      font-size: 2rem;
-      color: #6b40a1;
-      font-weight: bold;
+    color: #6b40a1;
+    font-size: 30px;
+    font-weight: bold;
+    margin: 5px 0 30px 0;
+    text-align: center;
   }
   
 /* Fin Page register and login */
