--- a/templates/home/_listAnnouncements.html.twig
+++ b/templates/home/_listAnnouncements.html.twig
@@ -2,7 +2,7 @@
 <!--Bloc Carte entreprise-->
     <div class="card">
         <div class="card_bloc_1">
-            <img src="{{ asset('images/announcements/'~ announcement.image ) | imagine_filter('miniatures') }}" alt="Image d'illustration de l'annonce : '{{ announcement.title }}'">
+            <img src="{{ asset('images/announcements/'~ announcement.image )}}" alt="Image d'illustration de l'annonce : '{{ announcement.title }}'">
             {# <img src="{{ vich_uploader_asset(announcement, 'imageFile') | imagine_filter('miniatures') }}" alt="Image d'illustration de l'annonce : '{{ announcement.title }}'"> #}
             {#<a href="{{ path('home_show', {slug: announcement.slug }) }}">Voir l'annonce</a>#}
         </div>
