--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Yeah-Inscription{% endblock %}
 
 {% block body %}
 
    <div class="w-100 mx-auto fond">
         <div class="w-50 mx-auto formulaire">
-            <h1 class="text-center titre mb-4 pt-4">Yeah-Inscription</h1>  
+            <h1 class="text-center titre mb-4 pt-4">Inscription</h1>  
             {{ form_start(registrationForm) }}
             {{ form_row(registrationForm.firstname) }}
             {{ form_row(registrationForm.lastname) }}
