--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %} Yeah-Connexion{% endblock %}
 
 {% block body %}
 <div class="w-100 mx-auto fond">
@@ -19,7 +19,7 @@
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
 
-        <h1 class=" titre mb-4 pt-4 text-center"> Yeah-Connexion</h1>
+        <h1 class=" titre mb-4 pt-4 text-center"> Connexion</h1>
 
         <label for="inputEmail" class="policeForm">Adresse e-mail</label>
         <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control mb-3" required autofocus>
@@ -43,7 +43,7 @@
     </form>
 
     <div class="  w-50 mx-auto my-5">
-        <h1 class="titre mb-4 font-weight-normal text-center">Nouveau client ?</h1>
+        <h1 class="titre mb-4 pt-4 text-center">Nouveau client ?</h1>
         
         <div class="col text-center">
             <button class="btn bouton" type="submit">
@@ -52,7 +52,5 @@
         </div>
     </div>
 </div>
-
-
 
 {% endblock %}
