--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -389,6 +389,7 @@ main section p {
 
     .buttonList .button {
         margin: 5px 0;
+        width: 100%;
     }
 
     .buttonList .button:last-child{
@@ -401,4 +402,9 @@ main section p {
     }
 }
 /*Fin Vue tablette */
+
+@media screen and (min-width: 1024px) {
+
+
+}
 
