--- a/templates/admin/users/show.html.twig
+++ b/templates/admin/users/show.html.twig
@@ -3,61 +3,63 @@
 {% block title %}Users{% endblock %}
 
 {% block body %}
-    <h1 class=" titre mb-4 pt-4 text-center">Users</h1>
+    <h1 class=" titre mb-4 pt-4  text-center">Users</h1>
 
     <a href="{{ path('admin_users_index') }}">back to list</a>
 
-    <table class="table">
-        <tbody>
+ <div class="col-sm col-lg-8 mr-4 fond mx-auto">
+        <table class="table">
+            <tbody class="">
 
-            <tr>
-                <th>Lastname</th>
-                <td>{{ user.lastname }}</td>
-            </tr>
-             <tr>
-                <th>Firstname</th>
-                <td>{{ user.firstname }}</td>
-            </tr>
-            <tr>
-                <th>Email</th>
-                <td>{{ user.email }}</td>
-            </tr>
-            <tr>
-                <th>Phone</th>
-                <td>{{ user.phone }}</td>
-            </tr>
-            <tr>
-                <th>Roles</th>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-            </tr>
-           
-        </tbody>
-    </table>
+                <tr>
+                    <th>Lastname</th>
+                    <td>{{ user.lastname }}</td>
+                </tr>
+                <tr>
+                    <th>Firstname</th>
+                    <td>{{ user.firstname }}</td>
+                </tr>
+                <tr>
+                    <th>Email</th>
+                    <td>{{ user.email }}</td>
+                </tr>
+                <tr>
+                    <th>Phone</th>
+                    <td>{{ user.phone }}</td>
+                </tr>
+                <tr>
+                    <th>Roles</th>
+                    <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                </tr>
+            
+            </tbody>
+        </table>
 
-    {# Pour le Dashboard 4 onglet, surement à isolés dans des twig distincts : Entreprise(s), Annonces postées, Abonnements en cours, Historique des Abonnements et la liste des utilisateurs qui est dans admin/users/index.html.twig #}
+        {# Pour le Dashboard 4 onglet, surement à isolés dans des twig distincts : Entreprise(s), Annonces postées, Abonnements en cours, Historique des Abonnements et la liste des utilisateurs qui est dans admin/users/index.html.twig #}
 
-    <!-- onglet "Entrepirses" -->
-    <h3>Entreprises</h3>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Nom</th>
-                <th>N° Siret</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for compagny in user.compagnies %}
-            <tr>
-                <td>{{ compagny.name }}</td>
-                <td>{{ compagny.siret }}</td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">Aucun ancien payement</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+        <!-- onglet "Entrepirses" -->
+        <h3>Entreprises</h3>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Nom</th>
+                    <th>N° Siret</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for compagny in user.compagnies %}
+                <tr>
+                    <td>{{ compagny.name }}</td>
+                    <td>{{ compagny.siret }}</td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="8">Aucun ancien payement</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
     <!-- onglet "Anonces postées" pour voir les annonces posté par l'utilisateur -->
     <h3>Annonces postées</h3>
