--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <main>
-        <div>
+        <div class="left_bloc">
             <!--Présentation entreprise-->
             <section>
                 <h1>Plateforme d’affaires et d’opportunités commerciales</h1>
@@ -97,7 +97,7 @@
         </div>
 
         <!--Carte géo-->
-        <div>
+        <div class="map">
             <!--Intégration Carte géo-->
         </div>
         <!--Fin carte géo-->
