--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,10 @@ body {
     font-size: 14px;
 }
 
+a:active {
+    color:black; 
+}
+
 /* Fin Propriétés globales */
 
 /*Backgrounds*/
@@ -407,6 +411,11 @@ main section p {
 
 @media screen and (min-width: 1024px) {
 
-
+    main{
+        display: grid;
+    }
+    
+    .left_bloc{
+    }
 }
 
