--- a/templates/admin/activity_sector/index.html.twig
+++ b/templates/admin/activity_sector/index.html.twig
@@ -8,24 +8,16 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Name</th>
-                <th>professions</th>
-                <th>actions</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
         {% for sector in sectors %}
             <tr>
-                <td>{{ sector.id }}</td>
                 <td>{{ sector.name }}</td>
-                <td> 
-                    {% for profession in sector.professions %} 
-                    {{ profession.name }} <hr>
-                    {% endfor %}
-                </td>
                 <td>
-                    <form method="post" action="{{ path('admin_sector_delete', {'id': sector.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                    <form method="post" action="{{ path('admin_activity_sector_delete', {'id': sector.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
                         <input type="hidden" name="_method" value="DELETE">
                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ sector.id) }}">
                         <button class="btn btn-danger">Delete</button>
@@ -40,5 +32,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('activity_sector_new') }}">Create new</a>
+    <a href="{{ path('admin_activity_sector_new') }}">Create new</a>
 {% endblock %}
