--- a/templates/admin/activity_sector/new.html.twig
+++ b/templates/admin/activity_sector/new.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Create new ActivitySector</h1>
 
-    {{ include('activity_sector/_form.html.twig') }}
+    {{ include('admin/activity_sector/_form.html.twig') }}
 
-    <a href="{{ path('activity_sector_index') }}">back to list</a>
+    <a href="{{ path('admin_activity_sector_index') }}">back to list</a>
 {% endblock %}
