--- a/templates/admin/subscription/edit.html.twig
+++ b/templates/admin/subscription/edit.html.twig
@@ -5,9 +5,9 @@
 {% block body %}
     <h1>Edit Subscription</h1>
 
-    {{ include('subscription/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('admin/subscription/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('subscription_index') }}">back to list</a>
+    <a href="{{ path('admin_subscription_index') }}">back to list</a>
 
-    {{ include('subscription/_delete_form.html.twig') }}
+    {{ include('admin/subscription/_delete_form.html.twig') }}
 {% endblock %}
