--- a/templates/admin/subscription/show.html.twig
+++ b/templates/admin/subscription/show.html.twig
@@ -22,9 +22,10 @@
         </tbody>
     </table>
 
-    <a href="{{ path('subscription_index') }}">back to list</a>
+    <a href="{{ path('admin_subscription_index') }}">back to list</a>
 
-    <a href="{{ path('subscription_edit', {'id': subscription.id}) }}">edit</a>
+    <a href="{{ path('admin_subscription_edit', {'id': subscription.id}) }}">edit</a>
 
-    {{ include('subscription/_delete_form.html.twig') }}
+    {{ include('admin/subscription/_delete_form.html.twig') }}
+    
 {% endblock %}
