--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -37,15 +37,15 @@
                         </a>
                     </li>
                     <li>
-                        <a href="" title="Recherche">
-                            <i class="las la-search"></i>
-                            <span>Recherche</span>
-                        </a>
-                    </li>
-                    <li>
                         <a href="" title="Messagerie">
                             <i class="las la-envelope"></i>
                             <span>Message</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="{{ path('search')}}" title="Recherche">
+                            <i class="las la-search"></i>
+                            <span>Recherche</span>
                         </a>
                     </li>
                     <li>
