--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -76,6 +76,9 @@
         <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
         {# CDN noUiSlider #}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/14.6.0/nouislider.min.js"></script>
+        {# js pour affichage des curseurs (gamme de budget) #}
+        <script src="{{ asset('js/sliderBudget.js') }}"></script>
+        <script src="{{ asset('js/selectAutoComplete.js') }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
