--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,6 +3,13 @@
 {% block title %} Yeah! - Accueil{% endblock %}
 
 {% block body %}
+
+
+    {% for message in app.flashes('success') %}
+    <div class="alert alert-success" role="alert">{{ message }}</div>
+    {% endfor %}
+
+    
     <main>
         <div class="left_bloc">
             <!--Présentation entreprise-->
@@ -26,29 +33,36 @@
                         </form>#}
 
                 <div class="search_filter"> 
-                    <form class="search_bar" action="{{ path('search')}}" method="get">
+                    <form class="search_bar" action="{{ path('home') }}" method="get">
                         <div>
-                            <input type="text" placeholder="Que recherchez-vous ?">
+                            <input type="text" name="search" placeholder="Que recherchez-vous ?">
                         </div> 
 
                         <div>
-                            <select name="categoryFilter" id="categoryFilter">
-                                <option value="">Secteur</option>                              
+                            <select name="activitySectorFilter" id="activitySectorFilter">
+                                <option value="">Secteurs d'activité</option>     
+                                {% for activitySector in activitySectors %} 
+                                    <option value={{ activitySector.id }}>{{ activitySector.name }}</option>
+                                {% endfor %}                         
                             </select>
                         </div>
                         <div>
-                            <select name="locationFilter" id="locationFilter">
+                            <select name="deptCode" id="locationFilter">
                                 <option value="">Où</option>
-                                <option value=""></option>
+                                {% for announcement in announcementsNoPag %} 
+                                    <option value={{ announcement.deptCode }}>{{ announcement. 	deptCode }} - {{ announcement.departememt }}</option>
+                                {% endfor %}     
                             </select>
                         </div>
                         <div>
                             <select name="adTypeFilter" id="adTypeFilter">
                                 <option value="">Type d'annonces ?</option>
-                                <option value=""></option>
+                                {% for category in categories %} 
+                                    <option value={{ category.id }}>{{ category.name }}</option>
+                                {% endfor %}   
                             </select>
                         </div>
-                        <a href="#"  type="button" class=" button violetBackground">C'est parti</a>
+                        <button type="submit" class=" button violetBackground">C'est parti</button>
                     </form>
                 </div>
             <!--Fin Barre de recherche-->
