--- a/templates/admin/users/show.html.twig
+++ b/templates/admin/users/show.html.twig
@@ -3,13 +3,13 @@
 {% block title %}Users{% endblock %}
 
 {% block body %}
-    <h1 class=" titre mb-4 pt-4  text-center">Users</h1>
+    <h1 class=" titre mb-4 pt-4 text-center">Users</h1>
 
     <a href="{{ path('admin_users_index') }}">back to list</a>
 
- <div class="col-sm col-lg-8 mr-4 fond mx-auto">
-        <table class="table">
-            <tbody class="">
+ <div class="col-sm col-lg-8 mr-4 mx-auto">
+        <table class="table ">
+            <tbody>
 
                 <tr>
                     <th>Lastname</th>
