--- a/templates/home/new.html.twig
+++ b/templates/home/new.html.twig
@@ -17,7 +17,7 @@
                 {{ form_row(form.description) }}
 
                 <div>
-                    <p>Budget :</p>
+                    <p class=" font-weight-bold form-control-lg form-control-a mb-3 ">Budget :</p>
                     <div id="slider"></div>
                     {{ form_row(form.price_min)}}
                     {{ form_row(form.price_max)}}    
