--- a/templates/home/_listAnnouncements.html.twig
+++ b/templates/home/_listAnnouncements.html.twig
@@ -127,8 +127,6 @@
 
                 <p>Coordonnées débloquées {{ announcement.unlockCount }} fois.</p>
 
-
-
             </div>
 
             <div class="buttonList">
@@ -136,7 +134,35 @@
                 <a href="#" type="button" class=" button darkGreyBackground">Enregistrer</a>
                 <a href="#" type="button" class=" button darkGreyBackground">Recommander</a>
                 <a href="#" type="button" class=" button lightGreyBackground">Contrepartie</a>
-                <a href="#" type="button" class=" button violetBackground">Répondre</a>
+
+                {# Ce boutton ouvre une modal bootsrap #}
+                <button type="button" class=" button violetBackground" data-toggle="modal" data-target="#unlockAnnoncementModal">Répondre</button>
+
+                <!-- Modal -->
+                <div class="modal fade" id="unlockAnnoncementModal" tabindex="-1" role="dialog" aria-labelledby="unlockAnnoncementModalLabel" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="unlockAnnoncementModalLabel">Modal title</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <p>Vous souhaitez être mis en relation avec ce client pour l’annonce : </p>
+                            
+
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+
+                
             </div>
         </div>
     </div>
