--- a/templates/home/_listAnnouncements.html.twig
+++ b/templates/home/_listAnnouncements.html.twig
@@ -101,14 +101,22 @@
                     <div class="card_alternative_text">
                         <p>
                             <i class="las la-phone"></i> 
-                            <a href="tel:{{ ( unlockedAnnouncement == true ) ? announcement.user.phone : '#' }}">{{ ( unlockedAnnouncement == true ) ? announcement.user.phone : 'disponible' }}</a>                        
+                            {% if unlockedAnnouncement == true %}
+                                <a href="tel:{{ announcement.user.phone }}">{{ announcement.user.phone }}</a>  
+                            {% else %}      
+                                disponible 
+                            {% endif %}                     
                         </p>
 
                     </div>
                     <div class="card_alternative_text">
                         <p>
                             <i class="las la-envelope"></i>
-                            <a href="mailto:{{ ( unlockedAnnouncement == true ) ? announcement.user.email : '#' }}">{{ ( unlockedAnnouncement == true ) ? announcement.user.email : 'disponible' }}</a>                           
+                            {% if unlockedAnnouncement == true %}
+                                <a href="mailto:{{ announcement.user.email }}">{{ announcement.user.email }}</a>  
+                            {% else %}      
+                                disponible 
+                            {% endif %}                      
                         </p>
                     </div>                
                 </address>
@@ -136,33 +144,10 @@
                 <a href="#" type="button" class=" button lightGreyBackground">Contrepartie</a>
 
                 {# Ce boutton ouvre une modal bootsrap #}
-                <button type="button" class=" button violetBackground" data-toggle="modal" data-target="#unlockAnnoncementModal">Répondre</button>
+                <button type="button" class=" button violetBackground" data-toggle="modal" data-target="#unlockAnnoncementModal">Débloquer</button>
 
-                <!-- Modal -->
-                <div class="modal fade" id="unlockAnnoncementModal" tabindex="-1" role="dialog" aria-labelledby="unlockAnnoncementModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="unlockAnnoncementModalLabel">Modal title</h5>
-                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                            </button>
-                        </div>
-                        <div class="modal-body">
-                            <p>Vous souhaitez être mis en relation avec ce client pour l’annonce : </p>
-                            
+                {{ include('home/_unlockAnnouncement.html.twig') }}
 
-
-                        </div>
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="button" class="btn btn-primary">Save changes</button>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-
-                
             </div>
         </div>
     </div>
