--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,6 +16,10 @@
     {% for message in app.flashes('failUnlock') %}
     <div class="alert alert-warning" role="alert">{{ message }}</div>
     {% endfor %}
+
+    {% for message in app.flashes('successWithdraw') %}
+    <div class="alert alert-success" role="alert">{{ message }}</div>
+    {% endfor %}
     
     <main>
         <div class="left_bloc">
