--- a/templates/home/_listAnnouncements.html.twig
+++ b/templates/home/_listAnnouncements.html.twig
@@ -144,7 +144,7 @@
                 <a href="#" type="button" class=" button lightGreyBackground">Contrepartie</a>
 
                 {# Ce boutton ouvre une modal bootsrap #}
-                <button type="button" class=" button violetBackground" data-toggle="modal" data-target="#unlockAnnoncementModal">Débloquer</button>
+                <button type="button" class=" button violetBackground" data-toggle="modal" data-target="#unlockAnnoncement{{ announcement.id }}Modal">Débloquer</button>
 
                 {{ include('home/_unlockAnnouncement.html.twig') }}
 
