is-illimeted viré

--- a/templates/admin/subscription/index.html.twig
+++ b/templates/admin/subscription/index.html.twig
@@ -8,8 +8,8 @@
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Name</th>
+                <th>Crédits confèrés</th>
                 <th>Price</th>
                 <th>actions</th>
             </tr>
@@ -17,12 +17,16 @@
         <tbody>
         {% for subscription in subscriptions %}
             <tr>
-                <td>{{ subscription.id }}</td>
                 <td>{{ subscription.name }}</td>
+                <td>{{ subscription.credit }}</td>
                 <td>{{ subscription.price }}</td>
                 <td>
-                    <a href="{{ path('admin_subscription_show', {'id': subscription.id}) }}">show</a>
-                    <a href="{{ path('admin_subscription_edit', {'id': subscription.id}) }}">edit</a>
+                    <form method="post" action="{{ path('admin_subscription_delete', {'id': subscription.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+                        <input type="hidden" name="_method" value="DELETE">
+                        <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ subscription.id) }}">
+                        <button class="btn">Delete</button>
+                    </form>
+                    <a class="btn" href="{{ path('admin_subscription_edit', {'id': subscription.id}) }}">edit</a>
                 </td>
             </tr>
         {% else %}
