--- a/templates/base_admin.html.twig
+++ b/templates/base_admin.html.twig
@@ -23,39 +23,51 @@
             <div class="logo">
                 <a href="{{ path('home') }}" title="Accueil du site"><img src="{{ asset('images/logo_Yeah.png') }}" alt="Logo Yeah!"></a>
             </div>
-            <button class="btn pinkBackground">Créer une publication</button>
-            <h1>Le réseau social des professionnels</h1>
+
+            <h1>Espace administration</h1>
             
             <!--Menu Navigation-->
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation"><span><i class="las la-bars"></i></span></button>
 
             <nav class="collapse navbar-collapse" id="navbarHeader">
-                <ul class="menu">
-                    <li>
-                        <a href="" title="">
-                            <i class="las la-heart"></i>
-                            <span>favoris</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" title="">
-                            <i class="las la-search"></i>
-                            <span>recherche</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" title="">
-                            <i class="las la-envelope"></i>
-                            <span>message</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" title="">
+
+                <div class="d-block text-center mr-5">
+                    <div class="dropdown show">
+                    {% if app.user %}
+                        <div data-toggle="dropdown" title="Menu administration" id="divCustomerArea">
                             <i class="las la-user"></i>
-                            <span>se connecter</span>
+                            <p>Bonjour {{ app.user.firstname }}</p>
+                        </div> 
+                        <div class="dropdown-menu">
+                            {% if is_granted("ROLE_ADMIN") %}
+
+                                <a class="dropdown-item" href="{{ path('admin_users_index') }}" title="Aller à l'index des utilisateurs">Aller à l'index des utilisateurs</a>
+                                <a class="dropdown-item" href="{{ path('admin_subscription_index') }}" title="Aller à l'index des abonnements">Aller à l'index des abonnements</a>
+                                <a class="dropdown-item" href="{{ path('admin_activity_sector_index') }}" title="Aller à l'index des secteurs d'activité">Aller à l'index des secteurs d'activité</a>
+                                <a class="dropdown-item" href="{{ path('admin_categories_index') }}" title="Aller à l'index des types d'annonces">Aller à l'index des types d'annonces</a>
+
+                            {% endif %}
+                                {# <a class="dropdown-item" href="{{ path('customer_details') }}" title="Espace Client">Espace Client</a> #}
+                                <a class="dropdown-item bouton" href="{{ path('home') }}" title="Retour vers l'acceuil du site">Retour vers l'acceuil du site</a>
+                                <a class="dropdown-item bouton" href="{{ path('app_logout') }}" title="Déconnexion">Déconnexion</a>                            
+                        </div>
+
+                        <a class="nav-link dropdown-toggle" id="userDropdown" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
+                            <a class="dropdown-item" href="{{ path('home') }}">Retour au site</a>
+                            <a class="dropdown-item" href="{{ path('app_logout') }}">Déconnexion</a>
+                        </div>
+
+                    {% else %}
+
+                        <a href= "{{ path('app_login') }}" title="Page de connexion">
+                            <i class="las la-user"></i>
+                            <span>Se connecter</span>
                         </a>
-                    </li>
-                </ul>
+                    {% endif %}
+                    </div>
+                </div>
+
             </nav>
             <!-- Fin Menu Navigation-->
         </header>
